# cs-ranking

./: .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  0001-Relax-init-parameter-type-checks.patch  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  definitions.nix  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_fixed.txt  requirements_fixed_gpu.txt  setup.cfg  setup.py  shell.nix  test_db.ipynb  tox.ini
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
binder/: requirements.txt
csrank/: .gitignore  __init__.py  _version.py  callbacks.py  cmpnet_core.py  constants.py  discrete_choice_losses.py  err.py  fate_choice.py  fate_network.py  fate_ranking.py  feta_choice.py  feta_network.py  graph_util.py  layers.py  learner.py  losses.py  metrics.py  metrics_np.py  numpy_util.py  pairwise_svm.py  rank_losses.py  rank_network.py  ranknet_core.py  tensorflow_util.py  theano_util.py  tunable.py  tuning.py  util.py
csrank/choice_functions/: __init__.py  fate_choice.py  feta_choice.py
csrank/choicefunction/: __init__.py  baseline.py  choice_functions.py  cmpnet_choice.py  fate_choice.py  fatelinear_choice.py  feta_choice.py  fetalinear_choice.py  generalized_linear_model.py  pairwise_choice.py  ranknet_choice.py  sda_choice.py  util.py
csrank/choicefunctions/: __init__.py  baseline.py  choice_functions.py  cmpnet_choice.py  fate_choice.py  fatelinear_choice.py  feta_choice.py  fetalinear_choice.py  generalized_linear_model.py  pairwise_choice.py  ranknet_choice.py  util.py
csrank/core/: __init__.py  cmpnet_core.py  fate_linear.py  fate_network.py  feta_linear.py  feta_network.py  pairwise_svm.py  ranknet_core.py  sda_core.py
csrank/dataset_reader/: __init__.py  dataset_reader.py  expedia_dataset_reader.py  letor_dataset_reader.py  letor_listwise_dataset_reader.py  letor_ranking_dataset_reader.py  mnist_dataset_reader.py  sushi_dataset_reader.py  synthetic_dataset_generator.py  tag_genome_reader.py  util.py
csrank/deprecated/: fate_linear.py  feta_linear.py  trip_advisor_dataset_reader.py  university_dataset_reader.py
csrank/discretechoice/: __init__.py  baseline.py  cmpnet_discrete_choice.py  discrete_choice.py  fate_discrete_choice.py  fatelinear_discrete_choice.py  feta_discrete_choice.py  fetalinear_discrete_choice.py  generalized_extreme_value.py  generalized_nested_logit.py  likelihoods.py  mixed_logit_model.py  model_selector.py  multinomial_logit_model.py  nested_logit_model.py  paired_combinatorial_logit.py  pairwise_discrete_choice.py  pairwise_discrete_choice_function.py  ranknet_discrete_choice.py  sda_discrete_choice.py  util.py
csrank/dyadranking/: contextual_ranking.py  dyad_ranker.py  fate_dyad_ranker.py
csrank/experiments/: __init__.py  constants.py  dbconnection.py  util.py
csrank/labelranking/: __init__.py  fate_label_ranker.py  instance_based_label_ranking.py  label_ranker.py  placketluce_model.py  ranking_by_pairwise_comparison.py
csrank/modules/: collection.py  instance_reduction.py  object_mapping.py
csrank/objectranking/: __init__.py  baseline.py  cmp_net.py  cmpnet_object_ranker.py  constants.py  expected_rank_regression.py  fate_object_ranker.py  fatelinear_object_ranker.py  feta_object_ranker.py  feta_ranker.py  feta_ranker_ranknet.py  fetalinear_object_ranker.py  lambdamart.py  list_net.py  object_ranker.py  rank_net.py  rank_svm.py  ranknet_object_ranker.py  util.py
csrank/tests/: __init__.py  test_callback.py  test_callbacks.py  test_choice_functions.py  test_discrete_choice.py  test_estimators.py  test_fate.py  test_learner.py  test_losses.py  test_metrics.py  test_pareto_dataset.py  test_ranking.py  test_tuning.py  test_util.py
docs/: Makefile  api.rst  conf.py  examples.rst  index.md  index.rst  intro.rst  make.bat
docs/api/: benchmark.rst  benchmarkcore.rst  benchmarkdc.rst  benchmarkor.rst  callbacks.rst  choicefunction.rst  context.rst  discretechoice.rst  fate.rst  feta.rst  objectranking.rst
docs/notebooks/: .gitignore  FATE-Net-Choice.ipynb  FATE-Net-DC-quickstart.ipynb  FATE-Net-DC.ipynb  FATE-Net-Ranking.ipynb  FATE-Ranking_quickstart.ipynb  GeneralizationExperiments.ipynb  Learning_choice-functions.ipynb  ParameterOptimizer-quickstart.ipynb  Rank-Net-Choice.ipynb  Visualize-NeuralNetwork.ipynb  letor.ipynb  letor_ranking.ipynb
experiments/: .gitignore  FATE-Net-Choice.ipynb  cluster_script.py  cluster_script_folds.py  constants.py  copy_code.ipynb  create_tag_genome_dataset.py  dataset_configs.ipynb  dbconnection.py  evaluate_job.py  experiment_cv.py  experiment_script.py  gen_exp.ipynb  generalization_experiment.py  parse_logs_file.py  performance_set_size.py  pymc3_model_evaluation.py  readfiles.ipynb  result_choice.ipynb  result_dc.ipynb  result_object_ranking.ipynb  result_script.ipynb  result_script.py  result_script2.py  temp_script.py  test_db.ipynb  util.py  utils_extracted.py
experiments/logs/: GR.csv  GR1.csv  generalizing.csv  generalizing_mean.csv  generalizing_mean_5.csv  generalizing_mean_6.csv  generalizing_mean_7.csv
notebooks/: FATE-Ranking quickstart.ipynb  GeneralizationExperiments.ipynb  GeneralizationOfExperiments.ipynb  Learning choice-functions.ipynb  ParameterOptimizer-quickstart.ipynb  Skyline Queries.ipynb  Visualize-NeuralNetwork.ipynb  Visualize-NueralNetwork.ipynb  VisualizeNN.ipynb  losses.ipynb  plot_graph.ipynb  pref_learning_linear_models.py  run_general_ranker.ipynb  run_generalization_experiment.ipynb  test_models.ipynb
scripts/: create_testenv.sh  install_miniconda.sh
(+53 files in other folders)
